--- a/styles/dark.css
+++ b/styles/dark.css
@@ -7,10 +7,19 @@
 :root.theme-dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    чем стили в медиазапросе предпочтений пользователя */
+  --bg-image: url("../images/cover-image-dark.png");
+  --bg-color: #000028;
+  --page-title-color: #db00ff;
+  --title-decor-color: #000028;
+  --accent-color: #ff0070;
+  --text-color: #f1b2ce;
+  --button-color: #ff0070;
+  --button-color-opacity: #ff007066;
+  --corner-color: #ff0070;
+  --section-title-color: #ff0070;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-dark .rec-element {
+  display: flex;
 }
