--- a/styles/light.css
+++ b/styles/light.css
@@ -3,14 +3,41 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 :root.theme-light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    чем стили в медиазапросе предпочтений пользователя */
+  --bg-image: url("../images/cover-image-light.png");
+  --bg-color: #fff3f7;
+  --page-title-color: #ffc2e6;
+  --title-decor-color: #353430;
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --button-color: #353430;
+  --button-color-opacity: #35343066;
+  --corner-color: #353430;
+  --section-title-color: #353430;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .rec-element {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-image: url("../images/cover-image-light.png");
+    --bg-color: #fff3f7;
+    --page-title-color: #ffc2e6;
+    --title-decor-color: #353430;
+    --accent-color: #ff8dcb;
+    --text-color: #353430;
+    --button-color: #353430;
+    --button-color-opacity: #35343066;
+    --corner-color: #353430;
+    --section-title-color: #353430;
+  }
+
+  .rec-element {
+    display: none;
+  }
 }
