--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,301 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем.
+} */
+  color: var(--text-color);
+  font-family: var(--font-family), monospace;
+  font-size: 18px;
+  line-height: 130%;
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  justify-content: end;
+  align-items: center;
+  padding: var(--padding);
+}
+
+.decorated-zone {
+  min-block-size: 668px;
+  block-size: 100vh;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  border-inline-end: 1px solid var(--corner-color);
+  border-block-start: 1px solid var(--corner-color);
+  inset-block-start: var(--padding);
+  inset-inline-end: var(--padding);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  border-inline-start: 1px solid var(--corner-color);
+  border-block-end: 1px solid var(--corner-color);
+  inset-block-end: var(--padding);
+  inset-inline-start: var(--padding);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.rec-element {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--accent-color);
+  line-height: 25px;
+  text-transform: uppercase;
+  inset-block-start: var(--padding);
+  inset-inline-end: calc(10px + var(--padding));
+}
+
+.rec-element::after {
+  content: "";
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px var(--accent-color);
+  background-color: var(--accent-color);
+  inline-size: 9px;
+  block-size: 9px;
+}
+
+.header__theme-menu {
+  justify-self: end;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  outline: none;
+  color: var(--button-color);
+  line-height: 100%;
+  text-transform: lowercase;
+  background-color: transparent;
+  cursor: pointer;
+  inline-size: 70px;
+  block-size: 26px;
+  appearance: none;
+  transition: 0.2s;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--button-color-opacity);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--button-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--button-color);
+  cursor: default;
+  pointer-events: none;
+}
+
+.header__title {
+  justify-self: start;
+}
+
+.page-title {
+  color: var(--page-title-color);
+  font-weight: var(--font-weight-bold);
+  font-size: var(--page-title-font-size);
+  line-height: 82.5%;
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.title-decor {
+  color: var(--title-decor-color);
+  font-weight: var(--font-weight-bold);
+  font-size: 18px;
+  background-color: var(--accent-color);
+  block-size: fit-content;
+}
+
+.section {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin-block-start: 50px;
+  padding: 0 var(--padding);
+}
+
+.section__title {
+  color: var(--section-title-color);
+  font-weight: var(--font-weight-bold);
+  font-size: 18px;
+}
+
+.section__list {
+  display: grid;
+  gap: 20px;
+}
+
+.section__content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.section__content-text {
+  color: var(--text-color);
+}
+
+.text-link {
+  text-decoration: none;
+  text-shadow: 2px 2px var(--accent-color);
+  transition: 0.2s;
+}
+
+.text-link:hover {
+  border-block-end: 2px solid currentColor;
+}
+
+.text-link:focus-visible {
+  outline: 1px solid currentColor;
+}
+
+.recomendations-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.regular {
+  font-weight: var(--font-weight-regular);
+}
+
+.section-why {
+  margin-block-start: 40px;
+}
+
+.section-gallery {
+  gap: 10px;
+}
+
+.gallery {
+  display: grid;
+  gap: 10px;
+}
+
+.gallery__image-item {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+.footer {
+  position: relative;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin-block-start: 40px;
+}
+
+.footer .page-title {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width >= 768px) {
+  :root {
+    --padding: 20px;
+    --page-title-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .decorated-zone {
+    min-block-size: 1024px;
+  }
+
+  .header__title {
+    margin-inline-start: -20px;
+  }
+
+  .header .title-decor {
+    justify-self: end;
+    inline-size: 50%;
+  }
+
+  .section {
+    margin-block-start: 80px;
+  }
+
+  .section:not(.section-gallery) {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section-why {
+    margin-block-start: 60px;
+  }
+
+  .section-what .section__list {
+    grid-column: 1 / -1;
+  }
+
+  .section-how .section__title {
+    grid-row: span 2;
+  }
+
+  .section-gallery {
+    gap: 20px;
+    margin-block-end: 60px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .gallery__image:first-child,
+  .gallery__image:last-child {
+    grid-column-start: span 2;
+  }
+
+  .gallery__image:nth-child(2),
+  .gallery__image:nth-child(3) {
+    grid-row-start: span 2;
+  }
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+  }
+
+  .decorated-zone {
+    min-block-size: 768px;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .section:not(.section-gallery) {
+    grid-template-columns: 1fr 2.06fr;
+  }
+
+  .section-what .section__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
