--- a/styles/dark.css
+++ b/styles/dark.css
@@ -8,18 +8,27 @@
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя */
-  --bg-image: url("../images/cover-image-dark.png");
-  --bg-color: #000028;
-  --page-title-color: #db00ff;
-  --title-decor-color: #000028;
+  --main-font-family: "IBM Plex mono", monospace;
   --accent-color: #ff0070;
+  --main-bg-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
   --text-color: #f1b2ce;
-  --button-color: #ff0070;
-  --button-color-opacity: #ff007066;
-  --corner-color: #ff0070;
-  --section-title-color: #ff0070;
+  --nav-color: #ff0070;
+  --nav-hover-color: rgba(255, 0, 112, 0.4);
+  --main-heading-color: #000028;
+  --header-title: #db00ff;
+  --main-gap: 10px;
+  --gap: 20px;
+  --main-text-size: 18px;
+  --main-line-height: 23.4px;
+  --font-weight-title: 700;
+  --font-weight: 400;
+  --title-line-height: 83%;
+  --title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
-
 .theme-dark .rec-element {
+  display: flex;
+}
+.theme-auto .rec-element {
   display: flex;
 }
