--- a/styles/light.css
+++ b/styles/light.css
@@ -7,37 +7,51 @@
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя */
-  --bg-image: url("../images/cover-image-light.png");
-  --bg-color: #fff3f7;
-  --page-title-color: #ffc2e6;
-  --title-decor-color: #353430;
+  --main-font-family: "IBM Plex mono", monospace;
   --accent-color: #ff8dcb;
+  --main-bg-color: #fff1f7;
+  --background-image: url(../images/cover-image-light.png);
   --text-color: #353430;
-  --button-color: #353430;
-  --button-color-opacity: #35343066;
-  --corner-color: #353430;
-  --section-title-color: #353430;
+  --nav-color: #353430;
+  --nav-hover-color: rgba(50, 49, 45, 0.4);
+  --main-heading-color: #353430;
+  --header-title: #ffc2e6;
+  --main-gap: 10px;
+  --gap: 20px;
+  --main-text-size: 18px;
+  --main-line-height: 23.4px;
+  --font-weight-title: 700;
+  --font-weight: 400;
+  --title-line-height: 83%;
+  --title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
-
 .theme-light .rec-element {
   display: none;
 }
-
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-image: url("../images/cover-image-light.png");
-    --bg-color: #fff3f7;
-    --page-title-color: #ffc2e6;
-    --title-decor-color: #353430;
+    --main-font-family: "IBM Plex mono", monospace;
     --accent-color: #ff8dcb;
+    --main-bg-color: #fff1f7;
+    --background-image: url(../images/cover-image-light.png);
     --text-color: #353430;
-    --button-color: #353430;
-    --button-color-opacity: #35343066;
-    --corner-color: #353430;
-    --section-title-color: #353430;
+    --nav-color: #353430;
+    --nav-hover-color: rgba(50, 49, 45, 0.4);
+    --main-heading-color: ##353430;
+    --header-title: #ffc2e6;
+    --main-gap: 10px;
+    --gap: 20px;
+    --main-text-size: 18px;
+    --main-line-height: 23.4px;
+    --font-weight-title: 700;
+    --font-weight: 400;
+    --title-line-height: 83%;
+    --title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
-
-  .rec-element {
+  .theme-light .rec-element {
+    display: none;
+  }
+  .theme-auto .rec-element {
     display: none;
   }
 }
