--- a/styles/style.css
+++ b/styles/style.css
@@ -3,299 +3,383 @@
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем.
 } */
-  color: var(--text-color);
-  font-family: var(--font-family), monospace;
-  font-size: 18px;
-  line-height: 130%;
-  background-color: var(--bg-color);
-  background-image: var(--bg-image);
-  background-repeat: no-repeat;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  background-image: var(--background-image);
+  background-color: var(--main-bg-color);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  min-height: min-content;
+  margin: auto;
+  font-family: var(--main-font-family);
+  font-size: var(--main-text-size);
+  line-height: var(--main-line-height);
+  font-weight: var(--font-weight);
 }
-
 .header {
-  position: relative;
   display: grid;
-  grid-template-columns: 1fr;
   grid-template-rows: 1fr min-content 1fr;
-  justify-content: end;
+  justify-items: end;
   align-items: center;
-  padding: var(--padding);
-}
-
-.decorated-zone {
+  min-inline-size: 100%;
   min-block-size: 668px;
-  block-size: 100vh;
+  height: 100vh;
+  padding: var(--main-gap);
 }
-
-.decorated-zone::before {
-  content: "";
-  position: absolute;
-  border-inline-end: 1px solid var(--corner-color);
-  border-block-start: 1px solid var(--corner-color);
-  inset-block-start: var(--padding);
-  inset-inline-end: var(--padding);
-  inline-size: 25px;
-  block-size: 25px;
-}
-
-.decorated-zone::after {
-  content: "";
-  position: absolute;
-  border-inline-start: 1px solid var(--corner-color);
-  border-block-end: 1px solid var(--corner-color);
-  inset-block-end: var(--padding);
-  inset-inline-start: var(--padding);
-  inline-size: 25px;
-  block-size: 25px;
-}
-
 .rec-element {
   position: absolute;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: var(--accent-color);
-  line-height: 25px;
+  color: var(--nav-color);
+  font-size: var(--main-text-size);
+  line-height: var(--main-line-height);
   text-transform: uppercase;
-  inset-block-start: var(--padding);
-  inset-inline-end: calc(10px + var(--padding));
+  inset-inline-end: calc(var(--main-gap) + 9px);
+  inset-block-start: calc(var(--main-gap) + 2px);
+  gap: 2px;
+  flex-wrap: wrap;
+  align-content: center;
+  align-self: center;
 }
-
 .rec-element::after {
   content: "";
   border-radius: 50%;
-  box-shadow: 0 0 4px 2px var(--accent-color);
-  background-color: var(--accent-color);
   inline-size: 9px;
   block-size: 9px;
+  background-color: var(--accent-color);
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
+  align-self: center;
 }
-
-.header__theme-menu {
+.theme-dark .rec-element {
+  gap: var(--main-gap);
+}
+.theme-auto .rec-element {
+  gap: var(--main-gap);
+}
+.decorated-zone {
+  position: relative;
+}
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-end: 1px solid var(--nav-color);
+  border-block-start: 1px solid var(--nav-color);
+  inset-inline-end: var(--main-gap);
+  inset-block-start: var(--main-gap);
+}
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-start: 1px solid var(--nav-color);
+  border-block-end: 1px solid var(--nav-color);
+  inset-inline-start: var(--main-gap);
+  inset-block-end: var(--main-gap);
+}
+.header-title {
+  font-weight: var(--font-weight-title);
+  font-size: var(--title-size);
+  line-height: var(--title-line-height);
+  color: var(--header-title);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+.title-decor {
+  align-items: flex-end;
   justify-self: end;
+  color: var(--main-heading-color);
+  background-color: var(--accent-color);
+  font-weight: var(--font-weight-title);
 }
-
+.header__theme-menu-button_type_light {
+  outline: none;
+  border-bottom: 1px solid var(--nav-color);
+}
+.header__theme-menu {
+  display: flex;
+  flex-direction: column;
+  justify-self: end;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: var(--main-gap);
+}
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  justify-content: center;
+  gap: var(--main-gap);
+  list-style: none;
+  justify-self: end;
+  align-self: end;
 }
-
-.header__theme-menu-button {
+.header__theme-menu-item {
   border: 1px solid transparent;
-  outline: none;
-  color: var(--button-color);
-  line-height: 100%;
-  text-transform: lowercase;
+  align-self: center;
+}
+.header__theme-menu-button {
+  text-align: center;
+  font-family: var(--main-font-family);
+  font-weight: var(--font-weight);
+  font-size: var(--main-text-size);
+  line-height: 18px;
+  color: var(--nav-color);
   background-color: transparent;
-  cursor: pointer;
-  inline-size: 70px;
-  block-size: 26px;
-  appearance: none;
-  transition: 0.2s;
+  border: 1px solid transparent;
+  padding-top: 3px;
+  padding-right: 12px;
+  padding-bottom: 3px;
+  padding-left: 12px;
+  outline: none;
 }
-
-.header__theme-menu-button:hover {
-  border: 1px solid var(--button-color-opacity);
-}
-
-.header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--button-color);
-}
-
 .header__theme-menu-button_active {
-  border: 1px solid var(--button-color);
-  cursor: default;
+  border: 1px solid var(--nav-color);
   pointer-events: none;
 }
-
-.header__title {
-  justify-self: start;
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--nav-hover-color);
 }
-
-.page-title {
-  color: var(--page-title-color);
-  font-weight: var(--font-weight-bold);
-  font-size: var(--page-title-font-size);
-  line-height: 82.5%;
-  text-shadow: 4px 4px 0 var(--accent-color);
+.header__theme-menu-button:focus {
+  outline: none;
+  border-bottom: 1px solid var(--nav-color);
 }
-
-.title-decor {
-  color: var(--title-decor-color);
-  font-weight: var(--font-weight-bold);
-  font-size: 18px;
+.header__theme-menu-button:focus-visible::after {
+  content: "";
+  position: absolute;
+  inline-size: 100%;
+  block-size: 1px;
+  background-color: var(--nav-color);
+  inset-block-end: -2px;
+  inset-inline-start: 0;
+}
+.main {
+  display: grid;
+  gap: 50px;
+  padding: var(--main-gap);
+  min-height: min-content;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.content-section {
+  min-height: min-content;
+  font-size: var(--main-text-size);
+  line-height: var(--main-line-height);
+}
+.content-section__title {
+  color: var(--nav-color);
+  margin-bottom: var(--gap);
+  font-weight: var(--font-weight-title);
+  font-size: var(--main-text-size);
+}
+.text-blocks {
+  display: grid;
+  gap: var(--gap);
+}
+.text-block {
+  display: grid;
+  align-content: flex-start;
+  gap: var(--main-gap);
+}
+.what {
+  .content-section__title {
+    grid-column: 1/-1;
+  }
+  .text-blocks {
+    grid-column: 1/-1;
+  }
+}
+.text-block__title {
+  color: var(--main-heading-color);
   background-color: var(--accent-color);
-  block-size: fit-content;
+  font-weight: var(--font-weight-title);
+  font-size: var(--main-text-size);
+  max-height: min-content;
 }
-
-.section {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
-  margin-block-start: 50px;
-  padding: 0 var(--padding);
-}
-
-.section__title {
-  color: var(--section-title-color);
-  font-weight: var(--font-weight-bold);
-  font-size: 18px;
-}
-
-.section__list {
-  display: grid;
-  gap: 20px;
-}
-
-.section__content {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.section__content-text {
+.text-block__content {
   color: var(--text-color);
 }
-
+.text-block__subtitle {
+  color: var(--main-heading-color);
+  background-color: var(--accent-color);
+  font-weight: var(--font-weight);
+}
 .text-link {
   text-decoration: none;
-  text-shadow: 2px 2px var(--accent-color);
-  transition: 0.2s;
+  text-shadow: 2px 2px 0px var(--accent-color);
 }
-
 .text-link:hover {
-  border-block-end: 2px solid currentColor;
+  border-bottom: 1px solid var(--text-color);
 }
-
 .text-link:focus-visible {
-  outline: 1px solid currentColor;
+  outline: 1px solid var(--text-color, #f1b2ce);
 }
-
-.recomendations-list {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.regular {
-  font-weight: var(--font-weight-regular);
-}
-
-.section-why {
-  margin-block-start: 40px;
-}
-
-.section-gallery {
-  gap: 10px;
-}
-
-.gallery {
+.text-block__list {
   display: grid;
-  gap: 10px;
+  gap: var(--gap);
 }
-
-.gallery__image-item {
-  display: block;
+.content-images {
+  display: grid;
+  gap: var(--main-gap);
+}
+.images {
+  display: grid;
+  gap: var(--main-gap);
+}
+.about__logo-image {
+  block-size: 100%;
   object-fit: cover;
   object-position: center;
-  block-size: 100%;
-  inline-size: 100%;
+  width: 100%;
 }
-
 .footer {
   position: relative;
   display: grid;
-  justify-content: center;
-  align-items: center;
-  margin-block-start: 40px;
-}
-
-.footer .page-title {
-  text-shadow: 2px 2px 0 var(--accent-color);
-}
-
-@media (width >= 768px) {
-  :root {
-    --padding: 20px;
-    --page-title-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  place-items: center;
+  min-inline-size: 100%;
+  min-block-size: 668px;
+  block-size: 100vh;
+  padding: 14px;
+  .shadow {
+    text-shadow: 2px 2px 0 var(--accent-color);
+    margin-left: 0px;
   }
-
-  .decorated-zone {
+  @supports (block-size: 100dvb) {
+    .footer {
+      block-size: 100dvb;
+    }
+  }
+}
+@media (width>=768px) {
+  .header {
     min-block-size: 1024px;
+    gap: 172px;
+    justify-items: flex-start;
+    align-items: start;
+    padding: var(--gap);
   }
-
-  .header__title {
-    margin-inline-start: -20px;
+  .header__rec {
+    inset-inline-end: calc(var(--main-gap) + 19px);
+    inset-block-start: calc(var(--main-gap) + 11px);
   }
-
-  .header .title-decor {
-    justify-self: end;
-    inline-size: 50%;
+  .decorated-zone::before {
+    margin: var(--main-gap);
   }
-
-  .section {
-    margin-block-start: 80px;
+  .decorated-zone::after {
+    margin: var(--main-gap);
   }
-
-  .section:not(.section-gallery) {
+  .title {
+    margin-left: -20px;
+  }
+  .title-decor {
+    width: 50%;
+    justify-self: right;
+    margin-top: -10px;
+  }
+  .header__theme-menu {
+    align-self: end;
+  }
+  .header__theme-menu-list {
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  .content {
+    gap: 80px;
+    padding: var(--gap);
+    margin-top: 39px;
+    margin-bottom: 39px;
+  }
+  .content-section {
+    display: grid;
     grid-template-columns: 1fr 2fr;
+    column-gap: var(--gap);
   }
-
-  .section-why {
-    margin-block-start: 60px;
+  .causes {
+    .content-section__title {
+      max-width: 236px;
+    }
   }
-
-  .section-what .section__list {
-    grid-column: 1 / -1;
+  .content-images {
+    gap: var(--gap);
   }
-
-  .section-how .section__title {
-    grid-row: span 2;
-  }
-
-  .section-gallery {
-    gap: 20px;
-    margin-block-end: 60px;
-  }
-
-  .gallery {
+  .images {
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: var(--gap);
   }
-
-  .gallery__image:first-child,
-  .gallery__image:last-child {
-    grid-column-start: span 2;
+  .sunset {
+    grid-column: 1 / span 2;
+    grid-row: 1/1;
+    width: 100%;
+    height: 100%;
+    justify-self: center;
+    align-self: center;
+    object-fit: cover;
   }
-
-  .gallery__image:nth-child(2),
-  .gallery__image:nth-child(3) {
-    grid-row-start: span 2;
+  .ice-cream {
+    grid-column: 3/3;
+    grid-row: 1 / span 2;
+  }
+  .tape {
+    grid-column: 1/1;
+    grid-row: 2 / span 4;
+  }
+  .books {
+    grid-column: 2/2;
+    grid-row: 2/2;
+  }
+  .street {
+    grid-column: 2 / span 2;
+    grid-row: 3 / span 3;
+  }
+  .footer {
+    min-block-size: 1024px;
+    grid-column: 1 / span 3;
   }
 }
-
-@media (width >= 1024px) {
-  .header__theme-menu {
-    justify-self: center;
-    align-self: start;
-  }
-
-  .decorated-zone {
+@media (width>=1024px) {
+  .header {
     min-block-size: 768px;
+    gap: 104px;
   }
-
+  .title {
+    align-items: flex-start;
+  }
+  .title-decor {
+    margin-top: var(--main-gap);
+  }
+  .header__theme-menu {
+    flex-direction: row;
+    align-self: flex-start;
+    justify-self: center;
+  }
   .header__theme-menu-list {
     flex-direction: row;
+    align-self: center;
+    justify-self: center;
   }
-
-  .section:not(.section-gallery) {
-    grid-template-columns: 1fr 2.06fr;
-  }
-
-  .section-what .section__list {
+  .content-section {
     grid-template-columns: repeat(3, 1fr);
+  }
+  .causes {
+    .content-section__title {
+      max-width: 315px;
+    }
+    .text-blocks {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  .text-blocks {
+    grid-column: span 2;
+  }
+  .tape {
+    grid-row: 2 / span 2;
+  }
+  .street {
+    grid-row: 3/3;
+  }
+  .footer {
+    min-block-size: 768px;
   }
 }
