third commit corrected 2

--- a/styles/light.css
+++ b/styles/light.css
@@ -37,7 +37,7 @@
     --text-color: #353430;
     --nav-color: #353430;
     --nav-hover-color: rgba(50, 49, 45, 0.4);
-    --main-heading-color: ##353430;
+    --main-heading-color: #353430;
     --header-title: #ffc2e6;
     --main-gap: 10px;
     --gap: 20px;
